--- a/ultra_enclosure_manager.ui
+++ b/ultra_enclosure_manager.ui
@@ -17,6 +17,12 @@
    <iconset resource="usm.qrc">
     <normaloff>:/img/icon.ico</normaloff>:/img/icon.ico</iconset>
   </property>
+  <property name="autoFillBackground">
+   <bool>true</bool>
+  </property>
+  <property name="styleSheet">
+   <string notr="true"/>
+  </property>
   <widget class="QLabel" name="label_2">
    <property name="geometry">
     <rect>
@@ -154,176 +160,280 @@
    <property name="autoFillBackground">
     <bool>true</bool>
    </property>
+   <property name="styleSheet">
+    <string/>
+   </property>
    <property name="title">
     <string/>
    </property>
    <property name="checkable">
     <bool>false</bool>
    </property>
-   <widget class="QLabel" name="label">
+   <widget class="QScrollArea" name="scrollArea_2">
     <property name="geometry">
      <rect>
-      <x>60</x>
-      <y>26</y>
-      <width>191</width>
-      <height>41</height>
-     </rect>
-    </property>
-    <property name="font">
-     <font>
-      <pointsize>11</pointsize>
-      <italic>false</italic>
-     </font>
-    </property>
-    <property name="text">
-     <string>ASM1352R RAID Config</string>
-    </property>
-    <property name="alignment">
-     <set>Qt::AlignmentFlag::AlignCenter</set>
-    </property>
-   </widget>
-   <widget class="QPushButton" name="sata_execute">
-    <property name="geometry">
-     <rect>
-      <x>200</x>
-      <y>290</y>
-      <width>91</width>
-      <height>41</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string>Execute</string>
-    </property>
-   </widget>
-   <widget class="QSpinBox" name="powertime">
-    <property name="geometry">
-     <rect>
-      <x>160</x>
-      <y>216</y>
-      <width>61</width>
-      <height>31</height>
-     </rect>
-    </property>
-    <property name="minimum">
-     <number>1</number>
-    </property>
-    <property name="maximum">
-     <number>10</number>
-    </property>
-   </widget>
-   <widget class="QLabel" name="label_3">
-    <property name="geometry">
-     <rect>
-      <x>30</x>
-      <y>215</y>
-      <width>141</width>
-      <height>31</height>
-     </rect>
-    </property>
-    <property name="font">
-     <font>
-      <pointsize>10</pointsize>
-      <italic>false</italic>
-     </font>
-    </property>
-    <property name="text">
-     <string>SATA power-up after</string>
-    </property>
-   </widget>
-   <widget class="QLabel" name="label_4">
-    <property name="geometry">
-     <rect>
-      <x>230</x>
-      <y>220</y>
-      <width>53</width>
-      <height>21</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string>second/s.</string>
-    </property>
-   </widget>
-   <widget class="QWidget" name="widget" native="true">
-    <property name="geometry">
-     <rect>
-      <x>30</x>
-      <y>70</y>
-      <width>251</width>
-      <height>131</height>
+      <x>-1</x>
+      <y>0</y>
+      <width>311</width>
+      <height>351</height>
      </rect>
     </property>
     <property name="autoFillBackground">
-     <bool>false</bool>
+     <bool>true</bool>
     </property>
-    <widget class="QCheckBox" name="PM">
+    <property name="widgetResizable">
+     <bool>true</bool>
+    </property>
+    <widget class="QWidget" name="scrollAreaWidgetContents_2">
      <property name="geometry">
       <rect>
-       <x>80</x>
-       <y>100</y>
-       <width>111</width>
-       <height>19</height>
+       <x>0</x>
+       <y>-121</y>
+       <width>297</width>
+       <height>470</height>
       </rect>
      </property>
-     <property name="acceptDrops">
-      <bool>false</bool>
+     <property name="minimumSize">
+      <size>
+       <width>0</width>
+       <height>470</height>
+      </size>
      </property>
-     <property name="text">
-      <string>Normal</string>
-     </property>
-     <property name="checked">
-      <bool>true</bool>
-     </property>
-     <property name="autoExclusive">
-      <bool>true</bool>
-     </property>
-    </widget>
-    <widget class="QCheckBox" name="JBOD">
-     <property name="geometry">
-      <rect>
-       <x>80</x>
-       <y>70</y>
-       <width>111</width>
-       <height>19</height>
-      </rect>
-     </property>
-     <property name="text">
-      <string>SPAN / JBOD</string>
-     </property>
-     <property name="autoExclusive">
-      <bool>true</bool>
-     </property>
-    </widget>
-    <widget class="QCheckBox" name="R0">
-     <property name="geometry">
-      <rect>
-       <x>80</x>
-       <y>10</y>
-       <width>80</width>
-       <height>19</height>
-      </rect>
-     </property>
-     <property name="text">
-      <string>RAID 0</string>
-     </property>
-     <property name="autoExclusive">
-      <bool>true</bool>
-     </property>
-    </widget>
-    <widget class="QCheckBox" name="R1">
-     <property name="geometry">
-      <rect>
-       <x>80</x>
-       <y>40</y>
-       <width>80</width>
-       <height>19</height>
-      </rect>
-     </property>
-     <property name="text">
-      <string>RAID 1</string>
-     </property>
-     <property name="autoExclusive">
-      <bool>true</bool>
-     </property>
+     <widget class="QLabel" name="label_4">
+      <property name="geometry">
+       <rect>
+        <x>220</x>
+        <y>360</y>
+        <width>53</width>
+        <height>21</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>second/s.</string>
+      </property>
+     </widget>
+     <widget class="QLabel" name="label_3">
+      <property name="geometry">
+       <rect>
+        <x>20</x>
+        <y>355</y>
+        <width>141</width>
+        <height>31</height>
+       </rect>
+      </property>
+      <property name="font">
+       <font>
+        <pointsize>10</pointsize>
+        <italic>false</italic>
+       </font>
+      </property>
+      <property name="text">
+       <string>SATA power-up after</string>
+      </property>
+     </widget>
+     <widget class="QLabel" name="label">
+      <property name="geometry">
+       <rect>
+        <x>60</x>
+        <y>30</y>
+        <width>191</width>
+        <height>41</height>
+       </rect>
+      </property>
+      <property name="font">
+       <font>
+        <pointsize>11</pointsize>
+        <italic>false</italic>
+       </font>
+      </property>
+      <property name="text">
+       <string>ASM1352R RAID Config</string>
+      </property>
+      <property name="alignment">
+       <set>Qt::AlignmentFlag::AlignCenter</set>
+      </property>
+     </widget>
+     <widget class="QSpinBox" name="powertime">
+      <property name="geometry">
+       <rect>
+        <x>150</x>
+        <y>356</y>
+        <width>61</width>
+        <height>31</height>
+       </rect>
+      </property>
+      <property name="minimum">
+       <number>1</number>
+      </property>
+      <property name="maximum">
+       <number>10</number>
+      </property>
+     </widget>
+     <widget class="QLabel" name="label_20">
+      <property name="geometry">
+       <rect>
+        <x>20</x>
+        <y>200</y>
+        <width>271</width>
+        <height>71</height>
+       </rect>
+      </property>
+      <property name="font">
+       <font>
+        <pointsize>10</pointsize>
+        <italic>false</italic>
+        <bold>true</bold>
+       </font>
+      </property>
+      <property name="styleSheet">
+       <string notr="true">color: rgb(255, 0, 0);</string>
+      </property>
+      <property name="text">
+       <string>Warning: ASM1352R with
+unsupported firmware
+may not support this function!</string>
+      </property>
+      <property name="alignment">
+       <set>Qt::AlignmentFlag::AlignCenter</set>
+      </property>
+     </widget>
+     <widget class="QWidget" name="widget" native="true">
+      <property name="geometry">
+       <rect>
+        <x>30</x>
+        <y>74</y>
+        <width>251</width>
+        <height>131</height>
+       </rect>
+      </property>
+      <property name="autoFillBackground">
+       <bool>false</bool>
+      </property>
+      <widget class="QCheckBox" name="PM">
+       <property name="geometry">
+        <rect>
+         <x>70</x>
+         <y>100</y>
+         <width>111</width>
+         <height>19</height>
+        </rect>
+       </property>
+       <property name="acceptDrops">
+        <bool>false</bool>
+       </property>
+       <property name="text">
+        <string> Normal</string>
+       </property>
+       <property name="checked">
+        <bool>true</bool>
+       </property>
+       <property name="autoExclusive">
+        <bool>true</bool>
+       </property>
+      </widget>
+      <widget class="QCheckBox" name="JBOD">
+       <property name="geometry">
+        <rect>
+         <x>70</x>
+         <y>70</y>
+         <width>111</width>
+         <height>19</height>
+        </rect>
+       </property>
+       <property name="text">
+        <string> SPAN / JBOD</string>
+       </property>
+       <property name="autoExclusive">
+        <bool>true</bool>
+       </property>
+      </widget>
+      <widget class="QCheckBox" name="R0">
+       <property name="geometry">
+        <rect>
+         <x>70</x>
+         <y>10</y>
+         <width>80</width>
+         <height>19</height>
+        </rect>
+       </property>
+       <property name="text">
+        <string> RAID 0</string>
+       </property>
+       <property name="autoExclusive">
+        <bool>true</bool>
+       </property>
+      </widget>
+      <widget class="QCheckBox" name="R1">
+       <property name="geometry">
+        <rect>
+         <x>70</x>
+         <y>40</y>
+         <width>80</width>
+         <height>19</height>
+        </rect>
+       </property>
+       <property name="text">
+        <string> RAID 1</string>
+       </property>
+       <property name="autoExclusive">
+        <bool>true</bool>
+       </property>
+      </widget>
+     </widget>
+     <widget class="QPushButton" name="sata_execute">
+      <property name="geometry">
+       <rect>
+        <x>200</x>
+        <y>410</y>
+        <width>91</width>
+        <height>41</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>Execute</string>
+      </property>
+     </widget>
+     <widget class="QLabel" name="label_21">
+      <property name="geometry">
+       <rect>
+        <x>20</x>
+        <y>290</y>
+        <width>270</width>
+        <height>2</height>
+       </rect>
+      </property>
+      <property name="autoFillBackground">
+       <bool>false</bool>
+      </property>
+      <property name="styleSheet">
+       <string notr="true">background-color: rgb(170, 170, 170);</string>
+      </property>
+      <property name="text">
+       <string/>
+      </property>
+     </widget>
+     <widget class="QLabel" name="label_22">
+      <property name="geometry">
+       <rect>
+        <x>70</x>
+        <y>315</y>
+        <width>171</width>
+        <height>31</height>
+       </rect>
+      </property>
+      <property name="font">
+       <font>
+        <pointsize>11</pointsize>
+        <italic>false</italic>
+       </font>
+      </property>
+      <property name="text">
+       <string>Other Configuration</string>
+      </property>
+      <property name="alignment">
+       <set>Qt::AlignmentFlag::AlignCenter</set>
+      </property>
+     </widget>
     </widget>
    </widget>
   </widget>
@@ -338,6 +448,9 @@
    </property>
    <property name="autoFillBackground">
     <bool>true</bool>
+   </property>
+   <property name="styleSheet">
+    <string/>
    </property>
    <property name="title">
     <string/>
@@ -361,7 +474,7 @@
      <property name="geometry">
       <rect>
        <x>0</x>
-       <y>0</y>
+       <y>-286</y>
        <width>297</width>
        <height>635</height>
       </rect>
@@ -373,7 +486,7 @@
       </size>
      </property>
      <property name="autoFillBackground">
-      <bool>true</bool>
+      <bool>false</bool>
      </property>
      <widget class="QPushButton" name="boxmode_execute">
       <property name="geometry">
@@ -484,7 +597,7 @@
       <property name="alignment">
        <set>Qt::AlignmentFlag::AlignCenter</set>
       </property>
-      <widget class="QCheckBox" name="checkBox">
+      <widget class="QCheckBox" name="nvme_self_power_checkbox">
        <property name="geometry">
         <rect>
          <x>30</x>
@@ -496,11 +609,14 @@
        <property name="text">
         <string>NVMe</string>
        </property>
+       <property name="checked">
+        <bool>true</bool>
+       </property>
        <property name="autoExclusive">
         <bool>false</bool>
        </property>
       </widget>
-      <widget class="QCheckBox" name="checkBox_2">
+      <widget class="QCheckBox" name="sata1_self_power_checkbox">
        <property name="geometry">
         <rect>
          <x>30</x>
@@ -512,11 +628,14 @@
        <property name="text">
         <string>SATA1</string>
        </property>
+       <property name="checked">
+        <bool>true</bool>
+       </property>
        <property name="autoExclusive">
         <bool>false</bool>
        </property>
       </widget>
-      <widget class="QCheckBox" name="checkBox_3">
+      <widget class="QCheckBox" name="sata2_self_power_checkbox">
        <property name="geometry">
         <rect>
          <x>30</x>
@@ -527,6 +646,9 @@
        </property>
        <property name="text">
         <string>SATA2</string>
+       </property>
+       <property name="checked">
+        <bool>true</bool>
        </property>
        <property name="autoExclusive">
         <bool>false</bool>
@@ -548,7 +670,7 @@
       <property name="alignment">
        <set>Qt::AlignmentFlag::AlignCenter</set>
       </property>
-      <widget class="QCheckBox" name="checkBox_6">
+      <widget class="QCheckBox" name="sata1_ext_power_checkbox">
        <property name="geometry">
         <rect>
          <x>30</x>
@@ -560,11 +682,14 @@
        <property name="text">
         <string>SATA1</string>
        </property>
+       <property name="checked">
+        <bool>true</bool>
+       </property>
        <property name="autoExclusive">
         <bool>false</bool>
        </property>
       </widget>
-      <widget class="QCheckBox" name="checkBox_4">
+      <widget class="QCheckBox" name="sata2_ext_power_checkbox">
        <property name="geometry">
         <rect>
          <x>30</x>
@@ -576,11 +701,14 @@
        <property name="text">
         <string>SATA2</string>
        </property>
+       <property name="checked">
+        <bool>true</bool>
+       </property>
        <property name="autoExclusive">
         <bool>false</bool>
        </property>
       </widget>
-      <widget class="QCheckBox" name="checkBox_5">
+      <widget class="QCheckBox" name="nvme_ext_power_checkbox">
        <property name="geometry">
         <rect>
          <x>30</x>
@@ -591,6 +719,9 @@
        </property>
        <property name="text">
         <string>NVMe</string>
+       </property>
+       <property name="checked">
+        <bool>true</bool>
        </property>
        <property name="autoExclusive">
         <bool>false</bool>
@@ -682,6 +813,9 @@
        <property name="text">
         <string>Combine Mode</string>
        </property>
+       <property name="checked">
+        <bool>true</bool>
+       </property>
        <property name="autoExclusive">
         <bool>true</bool>
        </property>
@@ -743,6 +877,9 @@
    </property>
    <property name="autoFillBackground">
     <bool>true</bool>
+   </property>
+   <property name="styleSheet">
+    <string/>
    </property>
    <property name="title">
     <string/>
@@ -982,6 +1119,9 @@ for better stability and performance.</string>
    <property name="autoFillBackground">
     <bool>true</bool>
    </property>
+   <property name="styleSheet">
+    <string/>
+   </property>
    <property name="title">
     <string/>
    </property>
@@ -1010,7 +1150,7 @@ for better stability and performance.</string>
    <widget class="QLabel" name="label_16">
     <property name="geometry">
      <rect>
-      <x>40</x>
+      <x>30</x>
       <y>40</y>
       <width>100</width>
       <height>100</height>
@@ -1087,10 +1227,10 @@ R-SODIUM-Ultra-Enclosure-Manager</string>
   <zorder>SATA_Interface_button</zorder>
   <zorder>boxmode_button</zorder>
   <zorder>about_button</zorder>
-  <zorder>about</zorder>
+  <zorder>overview</zorder>
   <zorder>sataconfig</zorder>
   <zorder>boxmode</zorder>
-  <zorder>overview</zorder>
+  <zorder>about</zorder>
  </widget>
  <resources>
   <include location="usm.qrc"/>
