--- a/ultra_enclosure_manager.ui
+++ b/ultra_enclosure_manager.ui
@@ -188,7 +188,7 @@
      <property name="geometry">
       <rect>
        <x>0</x>
-       <y>-121</y>
+       <y>0</y>
        <width>297</width>
        <height>470</height>
       </rect>
@@ -483,15 +483,15 @@ may not support this function!</string>
      <property name="geometry">
       <rect>
        <x>0</x>
-       <y>-381</y>
+       <y>-391</y>
        <width>297</width>
-       <height>730</height>
+       <height>740</height>
       </rect>
      </property>
      <property name="minimumSize">
       <size>
        <width>100</width>
-       <height>730</height>
+       <height>740</height>
       </size>
      </property>
      <property name="autoFillBackground">
@@ -501,7 +501,7 @@ may not support this function!</string>
       <property name="geometry">
        <rect>
         <x>200</x>
-        <y>670</y>
+        <y>680</y>
         <width>91</width>
         <height>41</height>
        </rect>
@@ -854,85 +854,11 @@ may not support this function!</string>
        <set>Qt::AlignmentFlag::AlignCenter</set>
       </property>
      </widget>
-     <widget class="QLabel" name="label_6">
-      <property name="geometry">
-       <rect>
-        <x>155</x>
-        <y>520</y>
-        <width>121</width>
-        <height>31</height>
-       </rect>
-      </property>
-      <property name="font">
-       <font>
-        <pointsize>10</pointsize>
-       </font>
-      </property>
-      <property name="text">
-       <string>minute/s enclosure</string>
-      </property>
-     </widget>
-     <widget class="QSpinBox" name="suspend_time">
-      <property name="geometry">
-       <rect>
-        <x>75</x>
-        <y>521</y>
-        <width>71</width>
-        <height>31</height>
-       </rect>
-      </property>
-      <property name="minimum">
-       <number>0</number>
-      </property>
-      <property name="maximum">
-       <number>255</number>
-      </property>
-      <property name="value">
-       <number>0</number>
-      </property>
-     </widget>
-     <widget class="QLabel" name="label_26">
-      <property name="geometry">
-       <rect>
-        <x>35</x>
-        <y>520</y>
-        <width>41</width>
-        <height>31</height>
-       </rect>
-      </property>
-      <property name="font">
-       <font>
-        <pointsize>10</pointsize>
-        <italic>false</italic>
-       </font>
-      </property>
-      <property name="text">
-       <string>After</string>
-      </property>
-     </widget>
-     <widget class="QLabel" name="label_27">
-      <property name="geometry">
-       <rect>
-        <x>40</x>
-        <y>560</y>
-        <width>241</width>
-        <height>31</height>
-       </rect>
-      </property>
-      <property name="font">
-       <font>
-        <pointsize>10</pointsize>
-       </font>
-      </property>
-      <property name="text">
-       <string>will suspend if no response from host.</string>
-      </property>
-     </widget>
      <widget class="QLabel" name="label_28">
       <property name="geometry">
        <rect>
         <x>20</x>
-        <y>590</y>
+        <y>600</y>
         <width>271</width>
         <height>71</height>
        </rect>
@@ -954,6 +880,50 @@ unsafe shutdowns count.</string>
       </property>
       <property name="alignment">
        <set>Qt::AlignmentFlag::AlignCenter</set>
+      </property>
+     </widget>
+     <widget class="QCheckBox" name="suspend_enable">
+      <property name="geometry">
+       <rect>
+        <x>40</x>
+        <y>520</y>
+        <width>231</width>
+        <height>31</height>
+       </rect>
+      </property>
+      <property name="font">
+       <font>
+        <pointsize>10</pointsize>
+       </font>
+      </property>
+      <property name="text">
+       <string>Enable enclosure suspend when
+host is suspended.</string>
+      </property>
+      <property name="autoExclusive">
+       <bool>true</bool>
+      </property>
+     </widget>
+     <widget class="QCheckBox" name="unmounted_suspend_enable">
+      <property name="geometry">
+       <rect>
+        <x>40</x>
+        <y>560</y>
+        <width>231</width>
+        <height>31</height>
+       </rect>
+      </property>
+      <property name="font">
+       <font>
+        <pointsize>10</pointsize>
+       </font>
+      </property>
+      <property name="text">
+       <string>Enable enclosure suspend when
+enlosure is unmounted.</string>
+      </property>
+      <property name="autoExclusive">
+       <bool>true</bool>
       </property>
      </widget>
     </widget>
